// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contacts reducer Direct messages reducer handles actions - appendNewMessages - when contact exists 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [
    "message-id-1",
    "message-id-2",
  ],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - appendNewMessages - when no contact 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [
    "message-id-1",
    "message-id-2",
  ],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - appendNewMessages when there are already new messages 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [
    "prev-id-1",
    "message-id-1",
    "message-id-2",
  ],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - cleanNewMessages - when contact exists 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - cleanNewMessages - when no contact 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - cleanNewMessages when there are already new messages 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setLastSeen - when contact exists 1`] = `
Immutable.Record {
  "lastSeen": "2019-03-07T13:03:48.000Z",
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setLastSeen - when no contact 1`] = `
Immutable.Record {
  "lastSeen": "2019-03-07T13:03:48.000Z",
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setLastSeen when last seen already set 1`] = `
Immutable.Record {
  "lastSeen": "2019-03-07T15:03:48.000Z",
  "username": "",
  "address": "",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setMessages when contact exists 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
    },
  ],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setMessages when no contact 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "",
  "address": "",
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
    },
  ],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setUsernames - when contact exists 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setUsernames - when no contact 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles actions - setUsernames when username already set 1`] = `
Immutable.Record {
  "lastSeen": null,
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [],
  "newMessages": Immutable.List [],
  "vaultMessages": Immutable.List [],
}
`;

exports[`contacts reducer Direct messages reducer handles epics - fetchMessages displays notifications for vault 1`] = `
Array [
  Array [
    "New message from testnickname",
    Object {
      "body": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04t...",
    },
  ],
  Array [
    "New message from testnickname",
    Object {
      "body": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04t...",
    },
  ],
  Array [
    "New message from testnickname",
    Object {
      "body": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04t...",
    },
  ],
  Array [
    "New message from testnickname",
    Object {
      "body": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04t...",
    },
  ],
  Array [
    "New message from testnickname",
    Object {
      "body": "This is some message test-id",
    },
  ],
]
`;

exports[`contacts reducer Direct messages reducer handles epics - fetchMessages fetches messages 1`] = `
Immutable.Map {
  "test adddress": Immutable.Record {
    "lastSeen": null,
    "username": "testnickname",
    "address": "test adddress",
    "messages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 4,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-1-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551960228,
        "message": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
        "type": 4,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-1-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551960228,
        "message": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "This is some message test-id",
        "spent": "0.0001",
      },
    ],
    "newMessages": Immutable.List [
      "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "tx-id-1-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "tx-id-0-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "tx-id-1-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    ],
    "vaultMessages": Immutable.List [],
  },
}
`;

exports[`contacts reducer Direct messages reducer handles epics - fetchMessages sets new messages 1`] = `
Immutable.Map {
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Immutable.Record {
    "lastSeen": "2019-03-07T08:03:48.000Z",
    "username": "",
    "address": "",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
  "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq": Immutable.Record {
    "lastSeen": "2019-03-07T12:33:48.000Z",
    "username": "",
    "address": "",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
  "test adddress": Immutable.Record {
    "lastSeen": null,
    "username": "testnickname",
    "address": "test adddress",
    "messages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 4,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-1-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551960228,
        "message": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
        "type": 4,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "message 0 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-1-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551960228,
        "message": "message 1 for zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "spent": "0.0001",
      },
      Immutable.ReceivedMessage {
        "id": "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "test adddress",
          "username": "testnickname",
        },
        "createdAt": 1551963828,
        "message": "This is some message test-id",
        "spent": "0.0001",
      },
    ],
    "newMessages": Immutable.List [
      "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "tx-id-1-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "tx-id-0-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "tx-id-1-zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "tx-id-0-zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    ],
    "vaultMessages": Immutable.List [],
  },
}
`;

exports[`contacts reducer Direct messages reducer handles epics - updateLastSeen - resendMessage resend selected direct message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingDirectMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "type": 4,
        "spent": "0.32",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
          "username": "Wenus",
        },
        "receiver": Immutable.Map {
          "replyTo": "zs1z9rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
          "username": "Sun",
        },
        "createdAt": 1551963828,
        "signature": Object {
          "data": Array [
            232,
            249,
            158,
            105,
            73,
            84,
            179,
            194,
            225,
            22,
            171,
            192,
            157,
            43,
            164,
            120,
            34,
            195,
            213,
            158,
            30,
            114,
            21,
            50,
            120,
            88,
            71,
            50,
            93,
            2,
            108,
            183,
            111,
            131,
            192,
            46,
            55,
            76,
            86,
            74,
            74,
            22,
            122,
            46,
            64,
            196,
            148,
            255,
            159,
            27,
            148,
            42,
            202,
            179,
            216,
            25,
            139,
            180,
            106,
            64,
            71,
            246,
            198,
            135,
          ],
          "type": "Buffer",
        },
        "message": "hello",
        "id": "message-op-id",
      },
      "recipientAddress": "zs1z9rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
      "recipientUsername": "Sun",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`contacts reducer Direct messages reducer handles epics - updateLastSeen updates store when contact does exist 1`] = `
Immutable.Map {
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Immutable.Record {
    "lastSeen": "2019-03-07T13:33:48.000Z",
    "username": "",
    "address": "",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
}
`;

exports[`contacts reducer Direct messages reducer handles epics - updateLastSeen updates store when contact does not exist 1`] = `
Immutable.Map {
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Immutable.Record {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "username": "",
    "address": "",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
}
`;
